Dynamic news and basic formatting

--- a/app/assets/stylesheets/neat-overrides.scss
+++ b/app/assets/stylesheets/neat-overrides.scss
@@ -30,4 +30,12 @@
 .btn-lead {
 	margin-top: 0px;
 }
-  
+
+.block {
+    // position: absolute;
+    // background: #eee;
+    // padding: 20px;
+    width: 300px;
+    // border: 1px solid #ddd;
+}
+
