--- a/app/views/pages/news.html.erb
+++ b/app/views/pages/news.html.erb
@@ -17,156 +17,7 @@
         <%= render 'about_sidebar' %>
       </div>
       <div class="col-sm-8">
-
-        <div class="col-sm-6 col-md-6">
-          <a class="info-thumbnail-link" href="http://www.huffingtonpost.com/erin-levin/thank-you-google-how-a-gl_b_5111061.html">
-          <div class="thumbnail info-thumbnail background-clouds color-text">
-            <%= image_tag("eecs-imba.jpg") %>
-            <div class="special background-peter-river color-white"><h4>East End Glee Club Saves Film Director From Burnout</h4></div>
-            <div class="caption bordered background-white">
-              <p class="description">"I walked into an event at the East End Community School and all my energy came back. Twenty of the school's most gifted singers - many native to New England but even more refugees from Rwanda, Burundi and Sudan - sang songs they learned from the African Children's Choir. This diverse group of third through fifth graders belted and grooved and smiled just like the twenty children from Choir 39 that my heart so missed." <br><%= link_to "(Read full article at Huffington Post)", "http://www.huffingtonpost.com/erin-levin/thank-you-google-how-a-gl_b_5111061.html" %></p>
-            </div>
-          </div>
-          </a>
-        </div>
-
-        <div class="col-sm-6 col-md-6">
-          <a class="info-thumbnail-link" href="http://www.pressherald.com/2012/09/06/breakfast-on-the-house_2012-09-07/">
-          <div class="thumbnail info-thumbnail background-clouds color-text">
-            <%= image_tag("breakfast.jpg") %>
-            <div class="special background-peter-river color-white"><h4>Breakfast on the House</h4></div>
-            <div class="caption bordered background-white">
-              <p class="description">"Typically, students qualify for free breakfast based on low family income. But now, all students — regardless of family income — will be offered free breakfast with low-sugar cereal, pastries, breakfast bars and juice at Reiche Elementary, East End Community, Riverton Elementary, Presumpscot Elementary and Lincoln Middle schools. The expansion isn’t costing Portland property taxpayers a dime, because the federal reimbursement for each qualifying meal exceeds the district’s cost to provide it. The district can use the extra money to provide meals to more students." <br><%= link_to "(Read full article at the Press Herald)", "http://www.pressherald.com/2012/09/06/breakfast-on-the-house_2012-09-07/" %></p>
-            </div>
-          </div>
-          </a>
-        </div>
-
-        <div class="col-sm-6 col-md-6">
-          <a class="info-thumbnail-link" href="http://bangordailynews.com/slideshow/the-best-voices-in-the-world-grammy-nominated-african-childrens-choir-visits-portland-school/">
-          <div class="thumbnail info-thumbnail background-clouds color-text">
-            <%= image_tag("afc.png") %>
-            <div class="special background-peter-river color-white"><h4>African Children's Choir Visits EECS</h4></div>
-            <div class="caption bordered background-white">
-              <p class="description">"After two performances at Merrill Auditorium, the Grammy Award-nominated African Children’s Choir rode their tour bus to the East End Community School for a pizza party with the resident glee club Monday afternoon. Local students handed out whoopie pies, skipped rope and danced with the globetrotting African choir before they took turns singing at a schoolwide assembly." <br><%= link_to "(Read full article at Bangor Daily News)", "http://bangordailynews.com/slideshow/the-best-voices-in-the-world-grammy-nominated-african-childrens-choir-visits-portland-school/" %></p>
-            </div>
-          </div>
-          </a>
-        </div>
-
-        <div class="col-sm-6 col-md-6">
-          <a class="info-thumbnail-link" href="http://www.centralmaine.com/2013/08/12/maine-program-to-give-nutritious-food-to-children/">
-          <div class="thumbnail info-thumbnail background-clouds color-text">
-            <%= image_tag("eecs-food-pantry.jpg") %>
-            <div class="special background-peter-river color-white"><h4>Maine Food Pantries Go To School</h4></div>
-            <div class="caption bordered background-white">
-              <p class="description">"Katie Wallace, a parent volunteer at Portland’s East End Community School, started bringing in snacks after the first day she volunteered in her then-kindergartner’s class when she saw about six children who didn’t have anything to eat at snack time.
-              <br><br>
-              She ran her volunteer snack program for more than two years before a grant from the Good Shepherd Food-Bank helped open a food pantry at the school to offer snacks to more students in need.
-              <br>
-              Wallace said hunger is a worse problem for younger children, who don’t know how to get food if it isn’t offered to them." <br><%= link_to "(Read full article at Kennebec Journal)", "http://www.centralmaine.com/2013/08/12/maine-program-to-give-nutritious-food-to-children/" %></p>
-            </div>
-          </div>
-          </a>
-        </div>
-
-
-        <div class="col-sm-6 col-md-6">
-          <a class="info-thumbnail-link" href="http://www.pressherald.com/interactive/2013-ten-mainers-to-be-thankful-for/">
-          <div class="thumbnail info-thumbnail background-clouds color-text">
-            <%= image_tag("eecs-food-pantry.jpg") %>
-            <div class="special background-peter-river color-white"><h4>EECS Parent Volunteer Named Among Press Herald's "Ten Mainers To Be Thankful For".</h4></div>
-            <div class="caption bordered background-white">
-              <p class="description">Katie Wallace, a long-time parent volunteer at East End Community School, started bringing in snacks after the first day she volunteered in her kindergartner’s class when she saw about six children who didn’t have anything to eat at snack time. Katie kickstarted and ran the volunteer snack program for more than two years before a grant from the Good Shepherd Food-Bank helped open a food pantry at the school to offer snacks to students in need. <br><%= link_to "(Read full article at Kennebec Journal)", "http://www.pressherald.com/interactive/2013-ten-mainers-to-be-thankful-for/" %></p>
-            </div>
-          </div>
-          </a>
-        </div>
-
-        <div class="col-sm-6 col-md-6">
-          <a class="info-thumbnail-link" href="http://bangordailynews.com/slideshow/it-tastes-slightly-of-the-ocean-portland-school-students-test-seaweed-pizza/">
-          <div class="thumbnail info-thumbnail background-clouds color-text">
-            <%= image_tag("seaweed.png") %>
-            <div class="special background-peter-river color-white"><h4>East End Community School students taste-test seaweed pizza</h4></div>
-            <div class="caption bordered background-white">
-              <p class="description">"The pizza topping rapidly gaining popularity among Portland’s East End Community School students is seaweed. 'This is the first week I’ve ever put seaweed on anything, but it’s been a wonderful addition,' said Laura Mailander of Cultivating Community, a Maine organization that spearheads garden education initiatives such as the one at the East End school." <br><%= link_to "(Read full article at Bangor Daily News)", "http://bangordailynews.com/slideshow/it-tastes-slightly-of-the-ocean-portland-school-students-test-seaweed-pizza/" %></p>
-            </div>
-          </div>
-          </a>
-        </div>
-
-        <div class="col-sm-6 col-md-6">
-          <a class="info-thumbnail-link" href="http://greeningschoolgrounds.wordpress.com/site-based-liaison-program/east-end-community-school/">
-          <div class="thumbnail info-thumbnail background-clouds color-text">
-            <%= image_tag("teaching-garden.png") %>
-            <div class="special background-peter-river color-white"><h4>Bug, Bird and Butterfly Teaching Garden</h4></div>
-            <div class="caption bordered background-white">
-              <p class="description">"The court yard space that we redesigned and planted as a Bird, Bug, and Butterfly Teaching Garden already looks completely transformed, so I can’t wait to see it in a few months as it grows and gets some finishing touches.The classes involved in the planting of the Garden learned about." <br><%= link_to "(Read full article @ Greening School Grounds)", "http://greeningschoolgrounds.wordpress.com/site-based-liaison-program/east-end-community-school/" %></p>
-            </div>
-          </div>
-          </a>
-        </div>
-
-        <div class="col-sm-6 col-md-6">
-          <a class="info-thumbnail-link" href="http://www.pressherald.com/news/at-east-end-school-improvement-a-matter-of-principal_2012-11-26.html?pagenum=full">
-          <div class="thumbnail info-thumbnail background-clouds color-text">
-            <%= image_tag("marcia-child.png") %>
-            <div class="special background-peter-river color-white"><h4>At East End school, improvement a matter of principal</h4></div>
-            <div class="caption bordered background-white">
-              <p class="description">"Marcia Gendron greets her students at the front doors of East End Community School on Munjoy Hill. She calls each child by name and doles out hugs to a few who stop to chat. Other teachers also greet the children, who are excited to be here." <br><%= link_to "(Read full article @ Portland Press Herald)", "http://www.pressherald.com/news/at-east-end-school-improvement-a-matter-of-principal_2012-11-26.html?pagenum=full" %></p>
-            </div>
-          </div>
-          </a>
-        </div>
-
-        <div class="col-sm-6 col-md-6">
-          <a class="info-thumbnail-link" href="http://maineinsights.com/perma/winterkids-partners-with-portland-nordic-to-teach-10-kids-to-cross-country-ski">
-          <div class="thumbnail info-thumbnail background-clouds color-text">
-            <%= image_tag("ski.png") %>
-            <div class="special background-peter-river color-white"><h4>WinterKids partners with Portland Nordic – to teach 10 kids to cross-country ski</h4></div>
-            <div class="caption bordered background-white">
-              <p class="description">"Thanks to a generous anonymous donation, WinterKids has arranged for ten students from the East End Community School to learn to cross-country ski at Riverside this winter." <br><%= link_to "(Read full article @ Maine Insights)", "http://maineinsights.com/perma/winterkids-partners-with-portland-nordic-to-teach-10-kids-to-cross-country-ski" %></p>
-            </div>
-          </div>
-          </a>
-        </div>
-
-        <div class="col-sm-6 col-md-6">
-          <a class="info-thumbnail-link" href="http://mainedoenews.net/2013/04/03/portland-schools-establish-promising-practices-for-all-students/">
-          <div class="thumbnail info-thumbnail background-clouds color-text">
-            <%= image_tag("promising.png") %>
-            <div class="special background-peter-river color-white"><h4>Portland schools establish promising practices for all students</h4></div>
-            <div class="caption bordered background-white">
-              <p class="description">"East End has used its federal grant to fund STEM coaches, design a new assessment system for math, and implement flexible grouping in certain subjects. And no progress would have been made without East End’s all-star teachers, who surrender lunch hours for grade-level meetings and devote two hours to professional development every single week." <br><%= link_to "(Read full article @ Maine DOE Newsroom)", "http://mainedoenews.net/2013/04/03/portland-schools-establish-promising-practices-for-all-students/" %></p>
-            </div>
-          </div>
-          </a>
-        </div>
-
-        <div class="col-sm-6 col-md-6">
-          <a class="info-thumbnail-link" href="http://www.maineyogafest.com/2/category/sponsor%20qacd1432f2ff/1.html">
-          <div class="thumbnail info-thumbnail background-clouds color-text">
-            <%= image_tag("yogafest.png") %>
-            <div class="special background-peter-river color-white"><h4>Maine Yoga Festival To Be Hosted at EECS</h4></div>
-            <div class="caption bordered background-white">
-              <p class="description">"We chose to hold the festival at the East End Community School which is a green building and is a case study for the city of Portland in their sustainable city project.  The building is built to be environmentally sustainable, use water more efficiently and improve the quality of waste water.  " <br><%= link_to "(Read full article @ Maine Yoga Fest)", "http://www.maineyogafest.com/2/category/sponsor%20qacd1432f2ff/1.html" %></p>
-            </div>
-          </div>
-          </a>
-        </div>
-
-        <div class="col-sm-6 col-md-6">
-          <a class="info-thumbnail-link" href="http://www.cascobay.usm.maine.edu/pdfs/East%20End%20School%20Green%20Roof%20Press%20Release.pdf">
-          <div class="thumbnail info-thumbnail background-clouds color-text">
-            <%= image_tag("roof.png") %>
-            <div class="special background-peter-river color-white"><h4>Plant, mow and water the ... roof?</h4></div>
-            <div class="caption bordered background-white">
-              <p class="description">"Maine rooftops are starting to sprout grass, trees and other plants, and nobody's complaining about poor maintenance. The new elementary school has what may be the state's first 'green roof', a covering of soil and low-growing plants on a first floor roof section just outside the second-floor window of the teacher's room." <br><%= link_to "(Read full article @ Portland Press Herald)", "http://www.cascobay.usm.maine.edu/pdfs/East%20End%20School%20Green%20Roof%20Press%20Release.pdf" %></p>
-            </div>
-          </div>
-          </a>
-        </div>
-
+        <%= render @articles %>
       </div>
     </div>
   </div>
