--- a/app/assets/stylesheets/neat-overrides.scss
+++ b/app/assets/stylesheets/neat-overrides.scss
@@ -31,11 +31,80 @@
 	margin-top: 0px;
 }
 
-.block {
-    // position: absolute;
-    // background: #eee;
-    // padding: 20px;
-    width: 300px;
-    // border: 1px solid #ddd;
+
+#blocks {
+  // max-width: 1100px;
+  // min-width: 300px;
+  // margin: 50px auto;
 }
 
+#columns {
+  -webkit-column-count: 2;
+  -webkit-column-gap: 10px;
+  -webkit-column-fill: auto;
+  -moz-column-count: 2;
+  -moz-column-gap: 10px;
+  -moz-column-fill: auto;
+  column-count: 2;
+  column-gap: 15px;
+  column-fill: auto;
+}
+
+.block {
+  display: inline-block;
+  // background: #FEFEFE;
+  // border: 2px solid #FAFAFA;
+  // box-shadow: 0 1px 2px rgba(34, 25, 25, 0.4);
+  margin: 0 2px 2px;
+  -webkit-column-break-inside: avoid;
+  -moz-column-break-inside: avoid;
+  column-break-inside: avoid;
+  padding: 15px;
+  padding-bottom: 5px;
+  // background: -webkit-linear-gradient(45deg, #FFF, #F9F9F9);
+  opacity: 1;
+  
+  -webkit-transition: all .2s ease;
+  -moz-transition: all .2s ease;
+  -o-transition: all .2s ease;
+  transition: all .2s ease;
+  // width: 300px;
+}
+
+.block img {
+  width: 100%;
+}
+
+.block p {
+  font: 12px/18px Arial, sans-serif;
+  color: #333;
+  margin: 0;
+}
+
+@media (max-width: 650px) {
+  #columns {
+    -webkit-column-count: 1;
+    -moz-column-count: 1;
+    column-count: 1;
+  }
+}
+
+@media (min-width: 960px) {
+  #columns {
+    -webkit-column-count: 2;
+    -moz-column-count: 2;
+    column-count: 2;
+  }
+}
+
+@media (min-width: 1100px) {
+  #columns {
+    -webkit-column-count: 2;
+    -moz-column-count: 2;
+    column-count: 2;
+  }
+}
+
+#columns:hover .pin:not(:hover) {
+  opacity: 0.4;
+}
