--- a/app/views/pages/news.html.erb
+++ b/app/views/pages/news.html.erb
@@ -17,6 +17,7 @@
         <%= render 'about_sidebar' %>
       </div>
       <div class="col-md-8" id="blocks">
+        <h1><span>In the News</span></h1>
         <div id="columns">
           <%= render @articles %>
         </div>
