Add contact form

--- a/app/assets/stylesheets/neat-overrides.scss
+++ b/app/assets/stylesheets/neat-overrides.scss
@@ -108,3 +108,28 @@
 #columns:hover .pin:not(:hover) {
   opacity: 0.4;
 }
+
+.flash {
+  margin-top: 75px;
+  margin-bottom: -101px;
+  font-size: 1em;
+  &.notice {
+    background: #fcf8e3;
+    border: 1px solid #f3d88d;
+    i {
+      color: #f8924e;
+    }
+    a {
+      color: #4d8493;
+      font-weight: bold;
+    }
+  }
+  p {
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
+  i {
+    line-height: 10px;
+    padding-right: 5px;
+  }
+}
