--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
   <![endif]-->
 </head>
 <body>
+  <%= render partial: 'shared/flash', locals: { flash: flash } %>
   <%= render 'shared/header' %>
   <%= yield %>
   <%= render 'shared/footer' %>
