--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -18,32 +18,7 @@
         <p class="author">lkokosz</p>
       </div>
       <div class="col-md-5">
-        <h3>Contact us</h3>
-        <form class="form-horizontal" role="form">
-          <div class="form-group">
-            <label for="inputName1" class="col-lg-3 control-label">Name</label>
-            <div class="col-lg-9">
-              <input type="text" class="form-control input-lg" id="inputName1" placeholder="Name">
-            </div>
-          </div>
-          <div class="form-group">
-            <label for="inputEmail1" class="col-lg-3 control-label">Email</label>
-            <div class="col-lg-9">
-              <input type="email" class="form-control input-lg" id="inputEmail1" placeholder="Email">
-            </div>
-          </div>
-          <div class="form-group">
-            <label for="inputContent1" class="col-lg-3 control-label">Content</label>
-            <div class="col-lg-9">
-              <textarea id="inputContent1" class="form-control" rows="3"></textarea>
-            </div>
-          </div>
-          <div class="form-group">
-            <div class="col-lg-offset-3 col-lg-9">
-              <button type="submit" class="btn btn-lead btn-lg">Send us an email</button>
-            </div>
-          </div>
-        </form>
+        <%= render 'shared/contact_form' %>
       </div>
     </div>
     <div class="row">
