--- a/app/assets/stylesheets/neat-overrides.scss
+++ b/app/assets/stylesheets/neat-overrides.scss
@@ -113,6 +113,10 @@
   margin-top: 75px;
   margin-bottom: -101px;
   font-size: 1em;
+  .alert-error {
+    background: #fbe3e4;
+    color: #8a1f11;
+  }
   &.notice {
     background: #fcf8e3;
     border: 1px solid #f3d88d;
