--- a/app/views/pages/_people.html.erb
+++ b/app/views/pages/_people.html.erb
@@ -1,7 +1,7 @@
 <section>
   <div class="container">
     <div class="reduce-top-margin">
-      <h1><span>This is us</span></h1>
+      <h1><span>Leadership</span></h1>
       <div class="row">
         <div class="col-xs-6 col-sm-4 col-md-2">
           <a href="" class="thumbnail gallery-thumbnail">
@@ -23,27 +23,6 @@
           </a>
           <br>
           <p class="text-center"><small>Lynn McCarthy, Librarian...Cras tristique eu sapien ut aliquam. Cras pharetra nisl sapien, ut tincidunt nunc feugiat at. Donec massa nisl, tincidunt eu nulla quis, tristique facilisis nibh.</small></p>
-        </div>
-        <div class="col-xs-6 col-sm-4 col-md-2">
-          <a href="" class="thumbnail gallery-thumbnail">
-            <%= image_tag 'placeholders/placeholder-office-couple-sq.jpg', :class => 'img-circle' %>
-          </a>
-          <br>
-          <p class="text-center"><small>Sed porta ac ipsum ut mollis. Integer id vestibulum dui, at dapibus orci. Nunc adipiscing, orci sit amet ultricies sagittis, arcu orci feugiat.</small></p>
-        </div>
-        <div class="col-xs-6 col-sm-4 col-md-2">
-          <a href="" class="thumbnail gallery-thumbnail">
-            <%= image_tag 'placeholders/placeholder-heli-sq.jpg', :class => 'img-circle' %>
-          </a>
-          <br>
-          <p class="text-center"><small>Cras tristique eu sapien ut aliquam. Cras pharetra nisl sapien, ut tincidunt nunc feugiat at. Donec massa nisl, tincidunt eu nulla quis, tristique facilisis nibh.</small></p>
-        </div>
-        <div class="col-xs-6 col-sm-4 col-md-2">
-          <a href="" class="thumbnail gallery-thumbnail">
-            <%= image_tag 'placeholders/placeholder-man-sq.jpg', :class => 'img-circle' %>
-          </a>
-          <br>
-          <p class="text-center"><small>Sed porta ac ipsum ut mollis. Integer id vestibulum dui, at dapibus orci. Nunc adipiscing, orci sit amet ultricies sagittis, arcu orci feugiat.</small></p>
         </div>
       </div>
     </div>
