--- a/app/views/pages/_staff_members.html.erb
+++ b/app/views/pages/_staff_members.html.erb
@@ -1,14 +1,14 @@
 <% @staff_members.each do |staff| %>
-    <div class="media clearfix background-clouds color-black">
-<!--       <div class="pull-left">
-        <%#= image_tag("pcff.png", class: "media-object") %>
-      </div> -->
-      <div class="media-body">
+  <div class="col-md-12 staff">
+    <div class="media clearfix">
+      <div class="col-md-4">
+        <%= image_tag staff.image_url(:square_sm) %>
+      </div>
+      <div class="col-md-8">
         <h3 class="media-heading"><%= staff.full_name %></h3>
-        <p class="media-date"><%= staff.title %> </p>
-        <p><%= image_tag staff.image_url(:thumb) %>
+        <p class="media-date"><%= staff.title %></p>
         <p><%= staff.bio %> </p>
       </div>
     </div>
-  </a>
+  </div>
 <% end %>
