--- a/app/views/shared/_contact_form.html.erb
+++ b/app/views/shared/_contact_form.html.erb
@@ -17,7 +17,7 @@
   <div class="form-group">
     <%= f.label :body, 'Message', :class => "col-lg-3 control-label" %>
     <div class="col-lg-9">
-      <%= f.text_area :body, :placeholder => "", :class => 'form-control input-lg', :html_options => {:rows => 3} %>
+      <%= f.text_area :body, :placeholder => "Message", :class => 'form-control input-lg', :html_options => {:rows => 3} %>
     </div>
   </div>
   <div class="form-group">
