--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -12,10 +12,10 @@
       </div>
       <div class="col-md-4">
         <h3>What parents are saying</h3>
-        <p class="testimonial">Proin venenatis velit nibh, sit amet commodo sapien tristique at. Interdum et malesuada fames ac ante ipsum primis in faucibus. Cras bibendum erat at ultricies rhoncus.</p>
-        <p class="author">lkokosz</p>
-        <p class="testimonial">Proin venenatis velit nibh, sit amet commodo sapien tristique at. Interdum et malesuada fames ac ante ipsum primis in faucibus. Cras bibendum erat at ultricies rhoncus.</p>
-        <p class="author">lkokosz</p>
+        <% @testamonials.each do |testamonial|%>
+          <p class="testimonial"><%= testamonial.body%></p>
+          <p class="author"><%= testamonial.name%></p>
+        <% end %>
       </div>
       <div class="col-md-5">
         <%= render 'shared/contact_form' %>
