--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="responsive-slider-parallax" data-spy="responsive-slider" data-parallax="true" data-parallax-direction="-1" data-transitiontime="1000" data-autoplay="true">
+<div class="responsive-slider-parallax">
   <div class="slides-container" data-group="slides">
     <ul>
       <li>
@@ -6,7 +6,7 @@
           <div class="container">
             <div class="wrapper">
               <div class="caption header" data-animate="slideAppearRightToLeft" data-delay="0" data-length="300">
-                <h2>EECS:</h2>
+                <h2>EECS</h2>
                 <p class="sub text-left" data-animate="slideAppearLeftToRight" data-delay="300" data-length="300"><span>Building academic excellence</span></p>
                 <p class="sub text-left" data-animate="slideAppearLeftToRight" data-delay="500" data-length="300"><span>through healthy relationships</span></p>
                 <p class="sub text-left" data-animate="slideAppearLeftToRight" data-delay="700" data-length="300"><span>and a child-centered approach.</span></p>
@@ -15,42 +15,7 @@
           </div>
         </div>
       </li>
-      <li>
-        <div class="slide-body" data-group="slide">
-          <div class="container">
-            <div class="wrapper">
-              <div class="caption header text-center" data-animate="slideAppearUpToDown" data-delay="0" data-length="300">
-                <h2>The Next Generation of Leaders:</h2>
-                <p class="sub" data-animate="slideAppearDownToUp" data-delay="300" data-length="300"><span>Preparing students for the digital age</span></p>
-                <p class="sub" data-animate="slideAppearDownToUp" data-delay="500" data-length="300"><span>with a strong focus on math and literacy skills</span></p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </li>
-      <li>
-        <div class="slide-body" data-group="slide">
-          <div class="container">
-            <div class="wrapper">
-              <div class="caption header text-right" data-animate="slideAppearDownToUp" data-delay="0" data-length="300">
-                <h2>Diversity: <span style="font-weight: 300"><span class="color-alizarin">c</span><span class="color-carrot">o</span><span class="color-sun-flower">l</span><span class="color-emerald">o</span><span class="color-peter-river">r</span></span></h2>
-                <p class="sub" data-animate="slideAppearUpToDown" data-delay="300" data-length="300"><span>Building a diverse & vibrant community </span></p>
-                <p class="sub" data-animate="slideAppearUpToDown" data-delay="500" data-length="300"><span>through compassionate education.</span></p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </li>
     </ul>
-  </div>
-  <a class="slider-control left hidden-xs hidden-sm" href="#" data-jump="prev"><i class="fa fa-angle-left"></i></a>
-  <a class="slider-control right hidden-xs hidden-sm" href="#" data-jump="next"><i class="fa fa-angle-right"></i></a>
-  <div class="pages-wrapper background-black">
-    <ol class="pages">
-      <li><a data-jump-to="1">1</a></li>
-      <li><a data-jump-to="2">2</a></li>
-      <li><a data-jump-to="3">3</a></li>
-    </ol>
   </div>
 </div>
 
@@ -115,7 +80,6 @@
           <div class="caption bordered background-white">
             <h3>STEM</h3>
             <p class="description">Math and Science literacy and excellence is one of our primary initiatives at EECS. EECS students learn math, science and technology core concepts through problem-based instruction, small-group interaction and visual learning, ensuring each student has a variety of ways to engage, learn, and thrive. </p>
-            <p class="buttons"><a href="#" class="btn btn-lead">Read more</a></p>
           </div>
         </div>
         </div>
@@ -133,7 +97,6 @@
           <div class="caption bordered background-white">
             <h3>Rise & Shine</h3>
             <p class="description">Our Rise and Shine program helps students kick start their day with a lineup of enriching programs designed to get their minds working and their bodies moving. Students take control of their learning by selecting from programs like Zumba, puppetry, computer programming, glee, video animation, knitting, math club, and hundreds more.</p>
-            <p class="buttons"><a href="#" class="btn btn-lead">Read more</a></p>
           </div>
         </div>
         </div>
@@ -150,8 +113,7 @@
           </div>
           <div class="caption bordered background-white">
             <h3>Literacy</h3>
-            <p class="description">Blurb here about our literacy programs</p>
-            <p class="buttons"><a href="#" class="btn btn-lead">Read more</a></p>
+            <p class="description">Swag Vice small batch actually pour-over tousled, gluten-free jean shorts drinking vinegar. Tattooed chambray vinyl, umami Wes Anderson fap sartorial fixie selfies YOLO 8-bit. Master cleanse brunch swag, single-origin coffee Thundercats organic pour-over Kickstarter narwhal salvia next level fap try-hard trust fund.</p>
           </div>
         </div>
       </div>
