--- a/app/assets/stylesheets/neat-overrides.scss
+++ b/app/assets/stylesheets/neat-overrides.scss
@@ -178,3 +178,13 @@ a.thumbnail.gallery-thumbnail {
   }
 }
   
+.events {
+  .meta {
+    h3 {
+      margin-top: 10px;
+    }
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-bottom: 10px;
+  }
+}
