Clean up upcoming events

--- a/app/assets/stylesheets/neat-overrides.scss
+++ b/app/assets/stylesheets/neat-overrides.scss
@@ -183,6 +183,11 @@ a.thumbnail.gallery-thumbnail {
     h3 {
       margin-top: 10px;
     }
+    p {
+      font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+      font-size: 14px;
+      font-weight: 300;
+    }
     padding-left: 10px;
     padding-right: 10px;
     margin-bottom: 10px;
