phone and email for staff

--- a/app/views/pages/_staff_members.html.erb
+++ b/app/views/pages/_staff_members.html.erb
@@ -7,6 +7,8 @@
       <div class="col-md-8">
         <h3 class="media-heading"><%= staff.full_name %></h3>
         <p class="media-date"><%= staff.title %></p>
+        <p><%= mail_to staff.email %></p>
+        <p><%= staff.phone %></p>
         <p><%= staff.bio %> </p>
       </div>
     </div>
