--- a/app/views/pages/_people.html.erb
+++ b/app/views/pages/_people.html.erb
@@ -4,19 +4,21 @@
       <h1><span>Our Staff</span></h1>
       <div class="row">
         <% @staff_members.each do |member| %>
-          <div class="col-xs-6 col-sm-4 col-md-2">
-            <a href="" class="thumbnail gallery-thumbnail">
-              <%= image_tag member.image_url(:square_sm), :class => 'img-circle' %>
-            </a>
-            <br>
-            <p class="text-center">
-              <small>
-                <%= "#{member.full_name}, #{member.title}" %>
-                <br />
-                <%= member.bio %>
-              </small>
-            </p>
-          </div>
+          <% unless member.image.nil? %>
+            <div class="col-xs-6 col-sm-4 col-md-2">
+              <a href="" class="thumbnail gallery-thumbnail">
+                <%= image_tag member.image_url(:square_sm), :class => 'img-circle' %>
+              </a>
+              <br>
+              <p class="text-center">
+                <small>
+                  <%= "#{member.full_name}, #{member.title}" %>
+                  <br />
+                  <%= member.bio %>
+                </small>
+              </p>
+            </div>
+          <% end %>
         <% end %>
       </div>
     </div>
