Fix single even width on upcoming

--- a/app/assets/stylesheets/neat-overrides.scss
+++ b/app/assets/stylesheets/neat-overrides.scss
@@ -179,6 +179,9 @@ a.thumbnail.gallery-thumbnail {
 }
   
 .events {
+  .thumbnail {
+    max-width: 500px;
+  }
   .meta {
     h3 {
       margin-top: 10px;
