change events to announcements

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -23,7 +23,7 @@
 <% if @events.present? %>
 <section>
   <div class="container">
-    <h1 class="text-center x-large">Upcoming Events</h1>
+    <h1 class="text-center x-large">Announcements</h1>
     <% if @events.count == 1%>
       <div class="col-md-12 events text-center" id="blocks">
         <%= render @events %>
