--- a/app/views/pages/news.html.erb
+++ b/app/views/pages/news.html.erb
@@ -19,7 +19,7 @@
       <div class="col-md-8" id="blocks">
         <h1><span>In the News</span></h1>
         <div id="columns">
-          <%= render @articles %>
+          <%= render @articles.order( 'articles.created_at DESC' ) %>
         </div>
       </div>
     </div>
