--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -58,7 +58,7 @@
           </div>
           <div class="caption bordered background-white">
             <h3>STEM</h3>
-            <p class="description">Math and Science literacy and excellence is one of our primary initiatives at EECS. EECS students learn math, science and technology core concepts through problem-based instruction, small-group interaction and visual learning, ensuring each student has a variety of ways to engage, learn, and thrive. </p>
+            <p class="description">Math and Science literacy and excellence is one of our primary initiatives at EECS. EECS students learn math, science and technology core concepts through inquiry-based learning, where many of the concepts explored are driven by student curiosity. We use a problem-based instruction approach, with small-group interaction and visual learning, ensuring each student has a variety of ways to engage, learn, and thrive. </p>
           </div>
         </div>
         </div>
