limit staff circles and add literacy lang

--- a/app/views/pages/_people.html.erb
+++ b/app/views/pages/_people.html.erb
@@ -3,7 +3,7 @@
     <div class="reduce-top-margin">
       <h1><span>Our Staff</span></h1>
       <div class="row">
-        <% @staff_members.each do |member| %>
+        <% @staff_member_circles.each do |member| %>
           <% unless member.image.nil? %>
             <div class="col-xs-6 col-sm-4 col-md-2">
               <a href="" class="thumbnail gallery-thumbnail">
