--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -92,7 +92,7 @@
           </div>
           <div class="caption bordered background-white">
             <h3>Literacy</h3>
-            <p class="description">Swag Vice small batch actually pour-over tousled, gluten-free jean shorts drinking vinegar. Tattooed chambray vinyl, umami Wes Anderson fap sartorial fixie selfies YOLO 8-bit. Master cleanse brunch swag, single-origin coffee Thundercats organic pour-over Kickstarter narwhal salvia next level fap try-hard trust fund.</p>
+            <p class="description">Our comprehensive literacy program helps students attain academic excellence in all areas of literacy including speaking, listening, reading and writing. (More here from Karen Fream Soon) </p>
           </div>
         </div>
       </div>
