math literacy content

--- a/app/views/pages/academics.html.erb
+++ b/app/views/pages/academics.html.erb
@@ -35,8 +35,52 @@
 
           <p>Review our <%= link_to "2012-2013 Success Plan", "http://www2.portlandschools.org/sites/default/files/School%20Success%20Plan.PDF" %> for more information on our strategy for academic excellence, and to learn about the great strides we have made over the last two years.</p>
         </div>
-        <h2><span>Mathematics</span></h2>
-        <p>enVisionMATH  is designed for students in grades K–6. It helps students develop an understanding of math concepts through problem-based instruction, small-group interaction, and visual learning with a focus on reasoning and modeling.</p>
+        <h2><span>Mathematics at EECS</span></h2>
+
+        <h3><span>enVision Math</span></h3>
+          <p>East End Community School, along with several other elementary schools in Portland, has adopted Pearson’s enVision Common Core Edition as our math program. This is a rigorous and focused program that is based on The Common Core State Standards.</p>
+
+          <strong><p>How is Envision different from other math programs?</p></strong>
+
+          <p>Envision was one of the first math programs written to meet the Common Core State Standards. It focuses on building strong foundational knowledge and number sense while moving students toward advanced mathematical thinking. Every lesson has visual learning, interactive learning, and independent practice. Envision spends a lot of time delving deeply into a concept; fewer topics are taught, but students develop a deeper understanding of math.</p>
+
+          <p>In Grades K, 1, and 2, students will develop a strong understanding of numbers (number sense and place value), master addition and subtraction facts, and will develop basic geometry skills.</p>
+
+          <p>In grades 3, 4, and 5, students will develop a strong understanding of mathematical properties, mathematical patterns, geometry, measurement with precision and purpose, analyzing and solving problems, and will develop a mastery of problem solving with fractions.</p>
+
+          <strong><p>How do you know my child understands the material?</p></strong>
+
+          <p>Envision has assessments embedded into every day’s work. There is a daily quick check, there is a topic test after each topic is complete, and there is a benchmark test after every four topics.</p>
+
+          <strong><p>What does a lesson look like?</p></strong>
+
+          <p>Every lesson starts with posing a problem to students who work collaboratively to solve the problem.  Next, students see and discuss an animation that takes them through a problem. This sets the purpose for the day’s work.  Students then work collaboratively on some interactive problems before moving into independent work. Finally, students are assessed on their learning for the day, and homework is assigned based on what each student needs to practice.</p>
+
+          <strong><p>Is there homework?</p></strong>
+
+          <p>There is extra work each day that students will need to complete to be successful in math. In the primary grades, time may be built in to the day to complete “homework.” In the intermediate grades, students will have homework Monday-Thursday. Students who complete their homework are proving to be significantly more successful on assessments.</p>
+
+          <p>Please feel free to contact <%= mail_to "chardj@portlandschools.org", "Joshua Chard"%> for more information.</p>
+
+        <h3><span>FASTT Math</span></h3>
+
+          <p>The Common Core State Standards require students to develop fluency with their math facts in the four operations, addition, subtraction, multiplication, and division. FASTT Math from Scholastic is a computer-based program for students in grades 2-5 that helps students become fluent with their facts.</p>
+
+          <p>Fact mastery goals are as follows:</p>
+            <ul>
+              <li>addition 0-9 by the end of second grade;</li>
+              <li>subtraction 0-9 and multiplication 0-9 by the end of third grade;</li> 
+              <li>division 0-9 by the end of fourth grade.</li> 
+            </ul>
+
+          <p>At home, students can link to the Stretch Games in FASTT Math at <%= link_to "http://www2.portlandschools.org", "http://www2.portlandschools.org" %>. Click on the Student link and choose Scholastic Applications.</p>
+
+        <h3><span>First In Math</span></h3>
+
+          <p>First In Math is another computer-based program that allows students in grades K-5 to select math activities and develop skills while earning stickers for themselves and for their class team. This program can be accessed from any computer with an Internet connection at <%= link_to "firstinmath.com", "http://firstinmath.com" %>.</p>
+
+          <p>For more information about math at EECS, please feel free to e-mail <%= mail_to "chardj@portlandschools.org", "Joshua Chard"%>, give him a call at school, or just drop by his office (room 231).</p>
+
 
         <h2><span>Literacy and Reading Comprehension</span></h2>
         <p>Blurb here about reading programs, maybe something from the literacy girls? Forgot their names but they're awesome.</p>
