--- a/app/assets/stylesheets/neat-overrides.scss
+++ b/app/assets/stylesheets/neat-overrides.scss
@@ -179,8 +179,12 @@ a.thumbnail.gallery-thumbnail {
 }
   
 .events {
-  .thumbnail {
-    max-width: 500px;
+  margin-bottom: 0px;
+  img {
+    width: 100%;
+    max-width: 150px;
+    margin-top: 10px;
+    border-radius: 4px;
   }
   .meta {
     h3 {
@@ -195,4 +199,17 @@ a.thumbnail.gallery-thumbnail {
     padding-right: 10px;
     margin-bottom: 10px;
   }
+}
+
+@media (max-width: 767px) {
+  .events {
+    text-align: center;
+    width: 100%;
+  }
+}
+
+@media (min-width: 960px) {
+}
+
+@media (min-width: 1100px) {
 }
