--- a/app/views/pages/announcements.html.erb
+++ b/app/views/pages/announcements.html.erb
@@ -16,10 +16,10 @@
       <div class="col-md-3">
         <%= render 'about_sidebar' %>
       </div>
-      <div class="col-md-8" id="blocks">
+      <div class="col-md-9">
         <h1><span>Announcements & Events</span></h1>
-        <div id="columns">
-          <%= render @announcements %>
+        <div class="col-md-12 events">
+          <%= render @events %>
         </div>
       </div>
     </div>
