--- a/app/views/pages/news.html.erb
+++ b/app/views/pages/news.html.erb
@@ -16,9 +16,9 @@
       <div class="col-md-3">
         <%= render 'about_sidebar' %>
       </div>
-      <div class="col-md-8" id="blocks">
+      <div class="col-md-9">
         <h1><span>In the News</span></h1>
-        <div id="columns">
+        <div class="col-md-12 articles">
           <%= render @articles.order( 'articles.created_at DESC' ) %>
         </div>
       </div>
