--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -9,7 +9,8 @@
           <span class="icon-bar background-lead"></span>
           <span class="icon-bar background-lead"></span>
         </button>
-        <%= link_to 'East End Community School', root_path, :class => 'navbar-brand' %>
+        <%= link_to 'East End Community School', root_path, :class => 'navbar-brand brand-lg' %>
+        <%= link_to 'EECS', root_path, :class => 'navbar-brand brand-sm' %>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
